# ohtu-lukuvinkkikirjasto

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  raportti.md  run_robot_tests.sh  tasks.py
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  database_connection.py  index.py  initialize_database.py  lukuvinkki.py
src/data/: database.db
src/entities/: lukuvinkki.py  lukuvinkkilista.py  user.py  users.py
src/repositories/: lukuvinkki_repository.py  user_repository.py
src/services/: user_service.py  vinkki_service.py
src/templates/: add_subject.html  index.html  layout.html  list.html  login.html  modify_subject.html  register.html
src/tests/: home.robot  lukuvinkki_test.py  register.robot  resource.robot  user_test.py
src/tests/repositories_test/: lukuvinkki_repository_test.py  user_repository_test.py
src/tests/services/: vinkki_service_test.py
src/tests/services_test/: vinkki_service_test.py
