[tool.poetry]
name = "ohtu-lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["taapp <julius.nieminen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.1"
coverage = "^6.2"
robotframework = "^4.1.2"
robotframework-seleniumlibrary = "^5.1.3"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
